@@ -10,14 +10,40 @@ use vars qw($VERSION @ISA);
 $VERSION = (qw$LastChangedRevision$)[1];
 @ISA = qw(Net::DNS::Resolver);
 
+
+my @hardcodedhints = qw (
+198.41.0.4 
+192.58.128.30
+192.112.36.4
+202.12.27.33
+192.5.5.241
+128.63.2.53
+192.36.148.17
+192.33.4.12
+192.228.79.201
+199.7.83.42
+128.8.10.90
+193.0.14.129
+192.203.230.10
+2001:503:ba3e::2:30
+2001:500:2f::f
+2001:500:1::803f:235
+2001:503:c27::2:30
+2001:500:3::42
+2001:dc3::35
+);
+
 sub hints {
   my $self = shift;
   my @hints = @_;
   print ";; hints(@hints)\n" if $self->{'debug'};
-  if (!@hints && $self->nameservers) {
-    $self->hints($self->nameservers);
+  
+  if (!@hints && !$self->nameservers){
+	  return $self->hints( @hardcodedhints )
+  }elsif (!@hints && $self->nameservers) {
+	  return $self->hints($self->nameservers);
   } else {
-    $self->nameservers(@hints);
+	  $self->nameservers(@hints);
   }
 
   print ";; verifying (root) zone...\n" if $self->{'debug'};
@@ -84,6 +110,9 @@ sub hints {
     }
   } else {
     warn "Servers [". join " ",($self->nameservers),"] did not give answers";
+    print ";; Unsetting hints and nameservers, trying with hardcoded nameservers\n" if  $self->{'debug'};
+    print $self->nameservers([]);
+    return $self->hints();
   }
   
   # Disable recursion flag.
